--- a/WebServer/web/css/style.css
+++ b/WebServer/web/css/style.css
@@ -95,14 +95,14 @@ nav > ul > li > a {
 
 #username, #password {
     margin-top: 30px;
-    background-color: #339999;
+    background-color: #99cccc;
     padding: 9px 9px 9px 9px;
     font-size: 20px;
     text-align: center;
     font-family: 'Roboto', monospace;
     width: 100%;
     border: none;
-    color: #ccffff;
+    color: #ecfbfb;
     text-transform: uppercase;
 }
 
