--- a/WebServer/web/css/style.css
+++ b/WebServer/web/css/style.css
@@ -8,6 +8,7 @@ body {
 
 #wrap {
     width: 100%;
+    height: 100%;
     text-align: center;
     margin: 0 auto;
 }
@@ -20,6 +21,11 @@ header {
     font-size: 60px;
     letter-spacing:-3px;
     max-height: 144px;
+}
+
+a {
+    text-decoration: none;
+    color: #000000
 }
 
 #logopic {
@@ -81,10 +87,31 @@ nav > ul > li > a {
 
 #content {
     width: 75%;
-    min-height: 60%;
+    min-height: 400px;
     background-color: #ecfbfb;
     color: #000;
     margin: 0 auto;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    width: 80%;
+}
+
+td, th {
+    border-bottom: 3px solid #9cc;
+    padding: 0.5rem;
+    text-align: left;
+}
+
+#shoppinglist {
+    padding: 30px;
+    margin: 0 auto;
+
+    width: 80%;
+    height: 200px;
+
 }
 
 #left {
@@ -141,6 +168,10 @@ nav > ul > li > a {
     background-color: inherit;
     font-family: 'Roboto', monospace;
     text-align: center;
+}
+
+footer h4 a {
+    color: #ecfbfb;
 }
 
 footer {
